--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
     <string name="edit_text_hint_location">Location</string>
     <string name="text_add_image">ADD IMAGE</string>
     <string name="btn_text_save">SAVE</string>
+    <string name="add_place_select_current_location_text">SELECT CURRENT LOCATION</string>
     <!--END-->
+
+    <string name="google_api_key">AIzaSyAqNUk7duR3NnBNco7reUQC3Dtn17a254E</string>
 </resources>
